--- a/2. DOM Selection/index2.html
+++ b/2. DOM Selection/index2.html
@@ -22,7 +22,7 @@
         
     <ul>
         <li>nama</li>
-        <li><a href="adakah">indo sia</a></li
+        <li><a href="adakah">indo sia</a></li>
         <li>alamat</li>
     </ul>
 </div>
